--- a/src/templates/bookings/booking_form.html
+++ b/src/templates/bookings/booking_form.html
@@ -3,40 +3,38 @@
   {{ booking_form.csrf_token }}
   <div class="row">
     <div class="four columns">
-      {% with form_field=booking_form.user_id %}
-        {% include "form_field.html" %}
+      {% with field=booking_form.user_id, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with form_field=booking_form.service_id %}
-        {% include "form_field.html" %}
+      {% with field=booking_form.service_id, include_label=True  %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with form_field=booking_form.customer_id %}
-        {% include "form_field.html" %}
+      {% with field=booking_form.customer_id, include_label=True  %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
   </div>
   <div class="row">
     <div class="four columns">
-      {% with form_field=booking_form.date %}
-        {% include "form_field.html" %}
+      {% with field=booking_form.date, include_label=True  %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with form_field=booking_form.time %}
-        {% include "form_field.html" %}
+      {% with field=booking_form.time, include_label=True  %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with form_field=booking_form.repeating_weeks %}
-        {% include "form_field.html" %}
+      {% with field=booking_form.repeating_weeks, include_label=True  %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
-    
   </div>
-
   <br>
   <div class="row">
     <div class="twelve columns">
