--- a/src/templates/dogs/dog_form.html
+++ b/src/templates/dogs/dog_form.html
@@ -3,64 +3,64 @@
   {{ dog_form.csrf_token }}
   <div class="row">
     <div class="four columns">
-      {% with form_field=dog_form.name %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.name, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with form_field=dog_form.date_of_birth %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.date_of_birth, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with form_field=dog_form.breed %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.breed, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
   </div>
   <div class="row">
     <div class="six columns">
-      {% with form_field=dog_form.customer_id %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.customer_id, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="six columns">
-      {% with form_field=dog_form.vet_id %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.vet_id, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
   </div>
   <div class="row">
     <div class="three columns">
-      {% with form_field=dog_form.is_allowed_treats %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.is_allowed_treats, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="three columns">
-      {% with form_field=dog_form.is_allowed_off_the_lead %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.is_allowed_off_the_lead, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="three columns">
-      {% with form_field=dog_form.is_allowed_on_social_media %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.is_allowed_on_social_media, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="three columns">
-      {% with form_field=dog_form.is_neutered_or_spayed %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.is_neutered_or_spayed, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
   </div>
   <div class="row">
     <div class="six columns">
-      {% with form_field=dog_form.behavioral_issues %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.behavioral_issues, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="six columns">
-      {% with form_field=dog_form.medical_needs %}
-        {% include "form_field.html" %}
+      {% with field=dog_form.medical_needs, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>    
   </div>
