--- a/src/templates/services/service_form.html
+++ b/src/templates/services/service_form.html
@@ -3,25 +3,25 @@
   {{ service_form.csrf_token }}
   <div class="row">
     <div class="six columns">
-      {% with form_field=service_form.name %}
-        {% include "form_field.html" %}
+      {% with field=service_form.name, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="six columns">
-      {% with form_field=service_form.description %}
-        {% include "form_field.html" %}
+      {% with field=service_form.description, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
   </div>
   <div class="row">
     <div class="six columns">
-      {% with form_field=service_form.price %}
-        {% include "form_field.html" %}
+      {% with field=service_form.price, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="six columns">
-      {% with form_field=service_form.duration %}
-        {% include "form_field.html" %}
+      {% with field=service_form.duration, include_label=True %}
+        {% include "forms/field.html" %}
       {% endwith %}
     </div>
   </div>
