Added past and future bookings toggle

--- a/src/templates/bookings/bookings_base.html
+++ b/src/templates/bookings/bookings_base.html
@@ -13,12 +13,21 @@
         <img id="add-booking-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
       </button>
       <button class="button button-primary u-half-width"
-        hx-get="/bookings/info"
+        hx-get="/bookings/info/future"
         hx-target="#bookings-container"
         hx-swap="innerHTML"
         hx-indicator="#booking-info-spinner"
         >
-        Booking Info
+        Future Bookings
+        <img id="booking-info-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+      </button>
+      <button class="button button-primary u-half-width"
+        hx-get="/bookings/info/past"
+        hx-target="#bookings-container"
+        hx-swap="innerHTML"
+        hx-indicator="#booking-info-spinner"
+        >
+        Past Bookings
         <img id="booking-info-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
       </button>
     </div>
