Fixed future bookings date. Added labels to filter forms for bookings.

--- a/src/templates/bookings/bookings_info_future.html
+++ b/src/templates/bookings/bookings_info_future.html
@@ -6,17 +6,17 @@
   hx-swap="innerHTML">
   <div class="row">
     <div class="four columns">
-      {% with field=booking_filter_form.user_id, include_field=True %}
+      {% with field=booking_filter_form.user_id, include_label=True %}
         {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with field=booking_filter_form.date_min, include_field=True %}
+      {% with field=booking_filter_form.date_min, include_label=True %}
         {% include "forms/field.html" %}
       {% endwith %}
     </div>
     <div class="four columns">
-      {% with field=booking_filter_form.date_max, include_field=True %}
+      {% with field=booking_filter_form.date_max, include_label=True %}
         {% include "forms/field.html" %}
       {% endwith %}
     </div>
