--- a/src/templates/bookings/bookings_info_past.html
+++ b/src/templates/bookings/bookings_info_past.html
@@ -1,6 +1,6 @@
 <h2>Filter Bookings</h2>
 <form id="booking-filter-form"
-  hx-get="/bookings/info/past"
+  hx-get="/bookings/past"
   hx-target="#bookings"
   hx-trigger="change"
   hx-swap="innerHTML">
