--- a/src/templates/vets/vet_detail.html
+++ b/src/templates/vets/vet_detail.html
@@ -1,13 +1,15 @@
 <tr id="vets-{{ vet.vet_id }}">
   <td>{{ vet.name }}</td>
   <td>{{ vet.address }}</td>
-  <td>{{ vet.phone }}</td>
-  <td>
-    {% with object_type='vets', object_id=vet.vet_id %}
-      {% include "buttons/edit.html" %}
-    {% endwith %}
-    {% with object_type='vets', object_id=vet.vet_id %}
-      {% include "buttons/delete.html" %}
-    {% endwith %}
-  </td>
+  <td><a href="tel:{{ vet.phone }}">{{ vet.phone }}</a></td>
+  {% if current_user.is_admin %}
+    <td>
+      {% with object_type='vets', object_id=vet.vet_id %}
+        {% include "buttons/edit.html" %}
+      {% endwith %}
+      {% with object_type='vets', object_id=vet.vet_id %}
+        {% include "buttons/delete.html" %}
+      {% endwith %}
+    </td>
+  {% endif %}
 </tr>
