--- a/src/templates/vets/vets.html
+++ b/src/templates/vets/vets.html
@@ -7,7 +7,9 @@
       <th>Name</th>
       <th>Address</th>
       <th>Phone</th>
-      <th>Actions</th>
+      {% if current_user.is_admin %}
+        <th>Actions</th>
+      {% endif %}
     </tr>
   </thead>
   <tbody hx-target="closest tr" hx-swap="outerHTML">
