--- a/src/templates/bookings/bookings_base.html
+++ b/src/templates/bookings/bookings_base.html
@@ -3,15 +3,17 @@
   <br>
   <div class="row">
     <div class="twelve columns">
-      <button class="button button-primary u-half-width"
-        hx-get="/bookings/add"
-        hx-target="#bookings-container"
-        hx-swap="innerHTML"
-        hx-indicator="#add-booking-spinner"
-        >
-        Add Booking
-        <img id="add-booking-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
-      </button>
+      {% if current_user.is_admin %}
+        <button class="button button-primary u-half-width"
+          hx-get="/bookings/add"
+          hx-target="#bookings-container"
+          hx-swap="innerHTML"
+          hx-indicator="#add-booking-spinner"
+          >
+          Add Booking
+          <img id="add-booking-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+        </button>
+      {% endif %}
       <button class="button button-primary u-half-width"
         hx-get="/bookings/info/future"
         hx-target="#bookings-container"
