--- a/src/templates/customers/customer_detail.html
+++ b/src/templates/customers/customer_detail.html
@@ -4,14 +4,16 @@
   <td>{{ customer.email }}</td>
   <td>{{ customer.emergency_contact_name }}</td>
   <td>{{ customer.emergency_contact_phone }}</td>
-  <td>{{ customer.signed_up_on }}</td>
-  <td>{{ customer.is_active }}</td>
-  <td>
-    {% with object_type='customers', object_id=customer.customer_id %}
-      {% include "buttons/edit.html" %}
-    {% endwith %}
-    {% with object_type='customers', object_id=customer.customer_id %}
-      {% include "buttons/delete.html" %}
-    {% endwith %}
-  </td>
+  {% if current_user.is_admin %}
+    <td>{{ customer.signed_up_on }}</td>
+    <td>{{ customer.is_active }}</td>
+    <td>
+      {% with object_type='customers', object_id=customer.customer_id %}
+        {% include "buttons/edit.html" %}
+      {% endwith %}
+      {% with object_type='customers', object_id=customer.customer_id %}
+        {% include "buttons/delete.html" %}
+      {% endwith %}
+    </td>
+  {% endif %}
 </tr>
